infrastructure-simulation/premium-tier-alpha/service-backend-premium.yaml
apiVersion: v1
kind: Service
metadata:
  name: netops-backend
  namespace: prod-customer-alpha
spec:
  type: ClusterIP
  selector:
    app: netops-backend
  ports:
    - port: 8000
      targetPort: 8000
