infrastructure-simulation/premium-tier-alpha/service-frontend-premium.yaml
apiVersion: v1
kind: Service
metadata:
  name: netops-frontend
  namespace: prod-customer-alpha
spec:
  type: ClusterIP
  selector:
    app: netops-frontend
  ports:
    - port: 80
      targetPort: 80
